# telegram-bot_News

./: .env.example  .gitignore  LICENSE  README.md  bot.py  main.py  pyproject.toml
.github/workflows/: create-pr-on-push.yml
workflows/: news_bot.yml:
