[project]
name = "news-bot"
version = "0.1.0"
description = "Telegram bot that republishes news from other channels"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[rate-limiter]>=21.0,<22.0",
    "aiohttp>=3.9,<3.10",
    "aiosqlite>=0.20",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
